--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2024"
 [dependencies]
 bytemuck = "1.25.0"
 glam = "0.32.0"
+image = "0.25.9"
 pollster = "0.4.0"
 wgpu = "28.0.0"
 
 winit = "=0.30"
-
