--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2024"
 
 [dependencies]
 bytemuck = "1.25.0"
+egui = "0.33.3"
+egui-wgpu = "0.33.3"
+egui-winit = "0.33.3"
 glam = "0.32.0"
 image = "0.25.9"
 pollster = "0.4.0"
-wgpu = "28.0.0"
+wgpu = "27.0.1"
 
-winit = "=0.30"
+winit = "0.30.12"
