--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ egui-winit = "0.33.3"
 glam = "0.32.0"
 image = "0.25.9"
 pollster = "0.4.0"
+rodio = "0.20.1"
 wgpu = "27.0.1"
 
 winit = "0.30.12"
