--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ glam = "0.32.0"
 image = "0.25.9"
 pollster = "0.4.0"
 rodio = "0.20.1"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 wgpu = "27.0.1"
 
 winit = "0.30.12"
